--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
             </tbody>
           </table>
           <form id="send-message">
-            <!-- <input id="username" type="text" placeholder="Username" /> -->
+            <input id="username" type="text" placeholder="Username" />
             <input id="message" type="text" placeholder="Enter a message..." />
             <input type="submit" value="Send" />
           </form>
@@ -40,22 +40,20 @@
       </div>
     </div>
     <script>
-      /*
       window.addEventListener("load", async function fetchMessages() {
         const resp = await fetch(`${window.location.origin}/messages`);
         const messages = await resp.json();
         messages.forEach(appendMessage);
       });
-      */
 
       const wsProtocol = window.location.protocol === "https:" ? "wss" : "ws";
       const ws = new WebSocket(`${wsProtocol}://${window.location.host}/ws`);
 
       function sendMessage(evt) {
         evt.preventDefault();
-        // const username = document.querySelector("#username").value;
+        const username = document.querySelector("#username").value;
         const message = document.querySelector("#message").value;
-        ws.send(message);
+        ws.send(JSON.stringify({ username, message }));
         document.querySelector("#message").value = "";
       }
 
@@ -63,14 +61,14 @@
       form.addEventListener("submit", sendMessage);
 
       function appendMessage(m) {
-        // const { username, message } = JSON.parse(m);
+        const { username, message } = JSON.parse(m);
         const tr = document.createElement("tr");
-        // const usernameEl = document.createElement("td");
-        // usernameEl.appendChild(document.createTextNode(username));
+        const usernameEl = document.createElement("td");
+        usernameEl.appendChild(document.createTextNode(username));
         const messageEl = document.createElement("td");
-        messageEl.appendChild(document.createTextNode(m));
+        messageEl.appendChild(document.createTextNode(message));
 
-        // tr.append(usernameEl);
+        tr.append(usernameEl);
         tr.append(messageEl);
         const tbody = document.querySelector("tbody");
         tbody.appendChild(tr);
