--- a/templates/index.html
+++ b/templates/index.html
@@ -4,36 +4,79 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Chat App</title>
+    <title>Chat</title>
     <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:wght@700&family=IBM+Plex+Sans:ital,wght@0,400;0,500;1,400&family=Karla:ital,wght@0,300;0,400;0,700;0,800;1,300;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic"
     />
-    <!-- CSS Reset -->
+    <!-- Normalize -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
     />
-    <!-- Milligram CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"
-    />
+    <style>
+      body {
+        font-family: "IBM Plex Sans", sans-serif;
+        font-size: 16px;
+      }
+
+      .container {
+        padding: 2rem;
+      }
+
+      h1 {
+        font-family: "IBM Plex Sans Condensed", sans-serif;
+        margin: 0 0 2rem 0;
+      }
+
+      #join label {
+        display: block;
+        margin-bottom: 0.5rem;
+      }
+
+      .form-field {
+        display: flex;
+      }
+
+      #username {
+        border: 1px solid #000;
+        border-radius: 0;
+        border-right: 0;
+        padding: 0.5rem;
+        width: 100%;
+        max-width: 300px;
+      }
+
+      #username::placeholder {
+        font-style: italic;
+        color: #9a9a9a;
+      }
+
+      #submit {
+        -webkit-appearance: none;
+        appearance: none;
+        border: none;
+        background-color: #000;
+        color: #fff;
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
       <div class="row">
         <div class="column">
           <h1>Chat</h1>
-          <table id="chat">
-            <tbody>
-              <tr></tr>
-            </tbody>
-          </table>
           <form id="join">
-            <input id="username" type="text" placeholder="Username" />
-            <input type="submit" value="Join" />
+            <label for="username">Enter a username to get started</label>
+            <div class="form-field">
+              <input id="username" type="text" placeholder="Username" />
+              <input id="submit" type="submit" value="Join" />
+            </div>
           </form>
         </div>
       </div>
